fix: Eureka 환경변수명 수정 - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE